added info command and standardized input to files